--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-import": "^1.13.5",
     "less": "^4.1.3",
     "less-loader": "^7.3.0",
+    "mitt": "^3.0.0",
     "pinia": "^2.0.21",
     "postcss-pxtorem": "^5.1.1",
     "vant": "^3.6.1",
