--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mitt": "^3.0.0",
     "pinia": "^2.0.21",
     "postcss-pxtorem": "^5.1.1",
+    "sass": "^1.54.8",
     "vant": "^3.6.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.5"
