--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
+    "axios": "^0.27.2",
     "babel-plugin-import": "^1.13.5",
     "less": "^4.1.3",
     "less-loader": "^7.3.0",
