--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
+    "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.7"
   }
 }
